...
                                        <rect key="frame" x="0.0" y="95.333333333333343" width="414" height="95.333333333333343"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <state key="normal" title="Show Regular Banner View"/>
                                        <connections>
                                            <action selector="showRegularBannerTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0Lv-Md-RGu"/>
...
                                        <rect key="frame" x="0.0" y="190.66666666666666" width="414" height="95.333333333333343"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <state key="normal" title="Without Image"/>
                                        <connections>
                                            <action selector="showBannerViewWithoutImageTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HRI-rM-P77"/>
...
                                        <rect key="frame" x="0.0" y="286" width="414" height="95"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <state key="normal" title="With Wide Image"/>
                                        <connections>
                                            <action selector="showBannerViewWithWideImageTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vWg-y6-usw"/>
...
                                        <rect key="frame" x="0.0" y="381" width="414" height="95.333333333333314"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <state key="normal" title="With Thin Image"/>
                                        <connections>
                                            <action selector="showBannerViewWithNarrowImageTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="GMU-k5-ECE"/>
...
                                        <rect key="frame" x="0.0" y="476.33333333333331" width="414" height="95.333333333333314"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <state key="normal" title="With Large Body Text"/>
                                        <connections>
                                            <action selector="showBannerViewWithLargeBodyTextTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="c7d-hN-EnM"/>
...
                                        <rect key="frame" x="0.0" y="571.66666666666663" width="414" height="95.333333333333371"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <state key="normal" title="With Long Title"/>
                                        <connections>
                                            <action selector="showBannerViewWithLongTitleTextTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nKO-LN-iNn"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Banner Messages" id="lmF-KU-1Kz"/>
                    <connections>
                        <outlet property="verifyLabel" destination="IdT-2g-OHS" id="8M6-6a-FCQ"/>
...
                                        <rect key="frame" x="0.0" y="55.666666666666671" width="414" height="55.666666666666671"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                        <state key="normal" title="Regular"/>
                                        <connections>
                                            <action selector="showRegular:" destination="ttC-lg-4V1" eventType="touchUpInside" id="XB1-eN-Dxj"/>
...
                                        <rect key="frame" x="0.0" y="166.66666666666666" width="414" height="55.666666666666657"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                        <state key="normal" title="Without Action Button"/>
                                        <connections>
                                            <action selector="showWithoutButton:" destination="ttC-lg-4V1" eventType="touchUpInside" id="8t6-t5-tFf"/>
...
                                        <rect key="frame" x="0.0" y="333.66666666666669" width="414" height="55.333333333333314"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                        <state key="normal" title="With Large Title and Body"/>
                                        <connections>
                                            <action selector="showWithLargeTitleAndBody:" destination="ttC-lg-4V1" eventType="touchUpInside" id="GpZ-Ch-lJf"/>
...
                                        <rect key="frame" x="0.0" y="389" width="414" height="55.666666666666686"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                        <state key="normal" title="Large Title Text"/>
                                        <connections>
                                            <action selector="showWithLargeTitle:" destination="ttC-lg-4V1" eventType="touchUpInside" id="38U-Wq-hKm"/>
...
                                        <rect key="frame" x="0.0" y="444.66666666666669" width="414" height="55.666666666666686"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                        <state key="normal" title="With Large Title and Body Without Image"/>
                                        <connections>
                                            <action selector="showWithLargeTitleAndBodyWithoutImage:" destination="ttC-lg-4V1" eventType="touchUpInside" id="rEV-RD-evh"/>
...
                                        <rect key="frame" x="0.0" y="556" width="414" height="55.333333333333371"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                        <state key="normal" title="Wide Image"/>
                                        <connections>
                                            <action selector="showWithWideImage:" destination="ttC-lg-4V1" eventType="touchUpInside" id="tOI-8R-sTB"/>
...
                                        <rect key="frame" x="0.0" y="611.33333333333337" width="414" height="55.666666666666629"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                        <state key="normal" title="Thin Image"/>
                                        <connections>
                                            <action selector="showWithThinImage:" destination="ttC-lg-4V1" eventType="touchUpInside" id="whs-EW-I4T"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Modal Messages" id="bHQ-TR-Bdx"/>
                    <connections>
                        <outlet property="verifyLabel" destination="PaF-mG-SKa" id="7LE-kU-qxT"/>
...
                                        <rect key="frame" x="0.0" y="111.33333333333334" width="414" height="111"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <state key="normal" title="Show Regular Image Only View"/>
