...
                                <rect key="frame" x="44" y="59" width="294" height="222"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="image-view-in-image-only-view" label="In-app message image">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
...
                                <rect key="frame" x="313" y="42" width="40" height="40"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="close-button" label="Close button"/>
                                <state key="normal" backgroundImage="close-with-transparency.png"/>
                                <connections>
...
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VfB-vw-7up">
                                <rect key="frame" x="5" y="47" width="60" height="60"/>
                                <accessibility key="accessibilityConfiguration" identifier="banner-image-view" label="In-app message image">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Messaging Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rzo-9i-rXZ">
                                <rect key="frame" x="70" y="47" width="324" height="20.333333333333329"/>
                                <accessibility key="accessibilityConfiguration" identifier="banner-message-title-view"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                <nil key="textColor"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="message body" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GOK-vx-mU8">
                                <rect key="frame" x="70" y="75.333333333333343" width="324" height="286.66666666666663"/>
                                <accessibility key="accessibilityConfiguration" identifier="banner-body-label"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                <nil key="textColor"/>
...
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <accessibility key="accessibilityConfiguration" identifier="banner-mode-uiview"/>
                        <constraints>
                            <constraint firstItem="GOK-vx-mU8" firstAttribute="trailing" secondItem="rzo-9i-rXZ" secondAttribute="trailing" id="7F2-Ym-Zcr"/>
...
                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="700" translatesAutoresizingMaskIntoConstraints="NO" id="c7x-Lf-M58">
                                        <rect key="frame" x="24" y="82.000000000000043" width="306" height="230.66666666666663"/>
                                        <accessibility key="accessibilityConfiguration" identifier="modal-image-view" label="In-app message image">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
...
                                    <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="252" verticalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VmW-ue-K1q">
                                        <rect key="frame" x="114" y="460.66666666666674" width="126" height="36"/>
                                        <accessibility key="accessibilityConfiguration" identifier="message-action-button"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="36" identifier="Max Action Button Height" id="6T1-on-oWM"/>
...
                                    <textView clipsSubviews="YES" clearsContextBeforeDrawing="NO" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor " textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="24j-6H-N9j">
                                        <rect key="frame" x="24" y="336.66666666666674" width="306" height="100"/>
                                        <accessibility key="accessibilityConfiguration" identifier="message-body-textview"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="100" identifier="Body Text View Height Constraint" id="h2w-ub-tEc"/>
...
                                </subviews>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <accessibility key="accessibilityConfiguration" identifier="message-card-view">
                                    <bool key="isElement" value="NO"/>
                                </accessibility>
...
